# project-map-cli-rust

./: .cli-map.json  .gitignore  .project-map.json  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs
src/core/: graph.rs  mod.rs  orchestrator.rs  parser.rs  query_engine.rs  toon.rs  utils.rs
src/mcp/: server.rs
tests/: integration_test.rs
tests/fixtures/kotlin/: Main.kt
tests/fixtures/kotlin/com/example/util/: NetworkUtils.kt
tests/fixtures/python/: module_a.py  module_b.py  module_c.py  simple.py
tests/fixtures/rust/: simple.rs
tests/fixtures/sql/: schema.sql
tests/fixtures/typescript/: app.ts
tests/fixtures/typescript/components/: Button.tsx
tests/fixtures/vue/: App.vue
tests/fixtures/vue/components/: HelloWorld.vue
